testing of update
KT-1  #comment testing of comment

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Forum
+  - name: GitHub Community Forum  <<<<testing testing testing>>>>
     url: https://github.community/
-    about: Please ask and answer questions here.
-  - name: GitHub Security Bug Bounty
+    about: Please ask and answer questions here. <<<<testing testing testing>>>>
+  - name: GitHub Security Bug Bounty        <<<<testing testing testing>>>>
     url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+    about: Please report security vulnerabilities here.  <<<<testing testing testing>>>>
