--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,3 +6,4 @@ contact_links:
   - name: GitHub Security Bug Bounty        <<<<testing testing testing>>>>
     url: https://bounty.github.com/
     about: Please report security vulnerabilities here.  <<<<testing testing testing>>>>
+<<test>
